--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
      jo nomal tha vo copy kia tha initaial one -->
   <!--1 <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.13.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">  haaga cdn karke kuch copy kia tha-->
 
-     <link href="css/all.min.css" rel="stylesheet">
-     <link href="css/fontawesome.min.css" rel="stylesheet"> 
+     <link href="https://jayu-9.github.io/css/all.min.css" rel="stylesheet">
+     <link href="https://jayu-9.github.io/css/fontawesome.min.css" rel="stylesheet"> 
      <!-- dek ye YT vala hai okay, and if you just keep all.min.css na still it works without fontawe vala link so yes-->
     <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://jayu-9.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
