--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"><img src="images/toplogo.png" alt="One Million lines" title="One Million lines"></a>
+          <a class="navbar-brand"><img src="https://jayu-9.github.io/images/toplogo.png" alt="One Million lines" title="One Million lines"></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -68,12 +68,12 @@
         <h1>Our goal is to inspire<br>Tallahassee to write 1,000,000<br>lines of code_</h1>
         <p>All over the country people are talking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong> Millions of lines of code are being written in the capital of Florida Tallahassee,the community is taking the challenge to write 1,000,000 lines of code_</p>
         <p><a class="btn btn-danger btn-lg" href="#" role="button">Get Involved &raquo;</a></p>
-        <img src="images/code.png" title="code.org" alt="image">
+        <img src="https://jayu-9.github.io/images/code.png" title="code.org" alt="image">
       </div>
     </div>
  
         <div id="whoi"class=" container homepage">
-          <img src="images/academy.png" title="academy.org" alt="image">
+          <img src="https://jayu-9.github.io/images/academy.png" title="academy.org" alt="image">
           <h2>WHO WE ARE</h2>
           <hr>
           <p>
